<?xml version="1.0"?>
<package>
  <name>ytthdmap</name>
  <version>0.0.1</version>
  <description>ytthdmap package </description>

  <maintainer email="xiande.lin@autofreetech.com">xiande.lin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ytthdmap_msgs</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>ytthdmap_msgs</run_depend>
  

  
</package>
